remove width atribute from canvas

--- a/trustpoint/templates/home/charts-tab.html
+++ b/trustpoint/templates/home/charts-tab.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col-4 shadow">
           <h2 class="p-2">Devices by onboarding protocol</h2>
-          <canvas id="devicesByOPBarChart" class="pb-2" width="400" height="200"></canvas>
+          <canvas id="devicesByOPBarChart" class="pb-2" height="200"></canvas>
         </div>
       </div>
     </div>
@@ -82,7 +82,7 @@
         </div>
         <div class="col-4 shadow">
           <h2 class="p-2">Certificates By Template</h2>
-          <canvas id="certsByTemplateBarChart" class="pb-2" width="400" height="200"></canvas>
+          <canvas id="certsByTemplateBarChart" class="pb-2" height="200"></canvas>
         </div>
       </div>
     </div>
@@ -99,7 +99,7 @@
         </div>
         <div class="col-3 shadow">
           <h2 class="p-2">Issuing CAs By Type</h2>
-          <canvas id="issuingCAsByTypePieChart" class="pb-2" width="200" height="200"></canvas>
+          <canvas id="issuingCAsByTypePieChart" class="pb-2" height="200"></canvas>
         </div>
       </div>
     </div>
