Add app version

--- a/trustpoint/templates/trustpoint/base.html
+++ b/trustpoint/templates/trustpoint/base.html
@@ -111,9 +111,7 @@
                     </form>
 
                 </div>
-                <div id="tp-version">
-                    v0.2.0
-                </div>
+                <div id="tp-version">v{{ APP_VERSION }}</div>
             </div>
         </nav>
 
