Added success messages to PKI model create views
- Added success messages to Truststore, Domain, and Issuing CA Create views
- Fixed failure on adding CA when the CA certificate was already in the database, but not as a CA
- Cursor change on Registration pattern creation template

--- a/trustpoint/templates/setup_wizard/tls_server_credential_apply.html
+++ b/trustpoint/templates/setup_wizard/tls_server_credential_apply.html
@@ -44,7 +44,7 @@
                 {% csrf_token %}
                 <div class="tp-form-btn-group tp-form-btn-group">
                     <a href="{% url 'setup_wizard:tls_server_credential_apply_cancel' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
-                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans 'Apply TLS-Configurations' %}</button>
+                    <button class="btn btn-primary w-100 mt-1" type="submit">{% trans 'Apply TLS configuration' %}</button>
                 </div>
             </form>
     </div>
