--- a/trustpoint/templates/pki/devid_registration/add.html
+++ b/trustpoint/templates/pki/devid_registration/add.html
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="card mt-4">
-                        <div class="card-header bg-primary text-white">
+                        <div class="card-header">
                             <h5 class="mb-0">{% trans 'Regex Helper' %}</h5>
                         </div>
                         <div class="card-body">
@@ -48,7 +48,7 @@
                             <!-- Generated Regex Options -->
                             <div id="regex-options" class="mb-3" style="display: none;">
                                 <label class="form-label">{% trans 'Generated Regex Variations:' %}</label>
-                                <ul class="list-group" id="regex-list"></ul>
+                                <ul class="list-group cursor" id="regex-list"></ul>
                             </div>
                         </div>
                     </div>
