--- a/trustpoint/templates/settings/backups/manage_backups.html
+++ b/trustpoint/templates/settings/backups/manage_backups.html
@@ -100,24 +100,7 @@
 
 <hr class="my-3"/>
 
-<form method="post"
-      action="{% url 'settings:backup-restore' %}"
-      enctype="multipart/form-data"
-      class="d-flex align-items-center">
-  {% csrf_token %}
-  <div class="me-2">
-    <input type="file"
-          name="backup_file"
-          accept=".dump,.gz"
-          required
-          class="form-control"/>
-  </div>
-  <button type="submit" class="btn btn-warning">
-    {% trans "Backup wiederherstellen" %}
-  </button>
-</form>
-
-
+{% include 'settings/backups/restore.html' %}
 
 <script>
   document.getElementById('select-all').addEventListener('change', function(e) {
