--- a/trustpoint/templates/setup_wizard/restore_backup.html
+++ b/trustpoint/templates/setup_wizard/restore_backup.html
@@ -31,18 +31,38 @@
             <h1>{% trans "Trustpoint - Setup Wizard" %}</h1>
         </div>
         <div class="card-body pt-3 pb-4">
-            <h2>{% trans 'Configure TLS-Server Credential' %}</h2>
+            <h2>{% trans 'Restore from backup' %}</h2>
             <hr class="mb-4">
-            <a href="{% url 'setup_wizard:generate_tls_server_credential' %}" class="btn btn-primary d-flex justify-content-center">{% trans 'Generate Self-Signed TLS-Server Credential' %}</a>
+            
+            <a class="btn btn-primary d-flex justify-content-center"
+                data-bs-toggle="modal"
+                data-bs-target="#restoreModal">
+                {% trans 'Database restore' %}
+            </a>
+
+            <div class="modal fade" id="restoreModal" tabindex="-1" aria-labelledby="restoreModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="restoreModalLabel">{% trans "Restore database from backup" %}</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{% trans 'Close' %}"></button>
+                        </div>
+                        <div class="modal-body">
+                            {% block additional %}
+                            {% include 'settings/backups/restore.html' %}
+                            {% endblock %}
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             <br>
             <a href="#" class="btn btn-secondary d-flex justify-content-center disabled" aria-disabled="true"
                style="pointer-events: none; cursor: not-allowed;">
-                {% trans 'Import TLS-Server Credential From File' %}
+                {% trans 'Trustpoint restore' %}
             </a>
-        </div>
-        
-        <div class="card-body pt-3 pb-4">
-            <a href="{% url 'setup_wizard:restore_backup' %}" class="btn btn-primary d-flex justify-content-center">{% trans 'Restore from backup' %}</a>
+            
+            <a href="{% url 'setup_wizard:initial' %}" class="btn btn-secondary w-100 mt-1">{% trans "Cancel" %}</a>
         </div>
     </div>
 
