Add templates and logic for IDevID onboarding with EST

--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/cmp_enroll_domain_credential_idevid_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/cmp_enroll_domain_credential_idevid_block.html
@@ -15,7 +15,7 @@
                     openssl cmp \<br>
                     -cmd ir \<br>
                     -implicit_confirm \<br>
-                    -server https://{{ host }}/.well-known/cmp/initialization/{{ device.domain }}/ \<br>
+                    -server https://{{ host }}/.well-known/cmp/initialization/{{ domain }}/ \<br>
                     -tls_used \<br>
                     -cert idevid.pem \<br>
                     -key idevid.key \<br>
