Update EST IDevID onboarding UI with new sections and adjustments

--- a/trustpoint/templates/devices/help/onboarding/est_idevid.html
+++ b/trustpoint/templates/devices/help/onboarding/est_idevid.html
@@ -25,15 +25,22 @@
                     {% include 'devices/help/onboarding/domain_credential_details/est_domain_credential_summary_block.html' %}
 
                     <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
+                    <hr>
                     {% include 'devices/help/generic_details/download_tls_server_certificate_block.html' %}
 
-                    <h2 class="mt-5">{% trans 'Enroll Domain Credential' %}</h2>
+                    <h2 class="mt-5">{% trans 'Prepare IDevID' %}</h2>
                     <hr>
                     {% include 'devices/help/onboarding/domain_credential_details/generic_domain_credential_key_gen_block.html' %}
                     {% include 'devices/help/onboarding/domain_credential_details/idev_p12_extraction_block.html' %}
+
+                    <h2 class="mt-5">{% trans 'Enroll Domain Credential' %}</h2>
+                    <hr>
                     {% include 'devices/help/onboarding/domain_credential_details/est_domain_credential_csr_idevid_block.html' %}
                     {% include 'devices/help/onboarding/domain_credential_details/est_enroll_domain_credential_idevid_block.html' %}
+
+                    <h2 class="mt-5">{% trans 'CA Certificate Chain' %}</h2>
                     <hr>
+                    {% include 'devices/help/generic_details/est_ca_chain_block.html' %}
                 </div>
 
             </div>
@@ -41,8 +48,8 @@
                 <div class="tp-card-btn-footer m-1">
                     <button type="button" value="Back" class="btn btn-secondary btn-half"
                             onClick="history.back()">{% trans 'Back' %}</button>
-                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
-                       class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
+                    {#                    <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"#}
+                    {#                       class="btn btn-primary">{% trans "Lifecycle Management" %}</a>#}
                 </div>
             </div>
         </div>
