--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_enroll_domain_credential_idevid_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_enroll_domain_credential_idevid_block.html
@@ -17,7 +17,7 @@
                     --header "Content-Type: application/pkcs10" \<br>
                     --data-binary "@domain_credential_csr.der" \<br>
                     -o certificate.der \<br>
-                    https://{{ host }}/.well-known/est/{{ device.domain }}/tlsclient/simpleenroll/
+                    https://{{ host }}/.well-known/est/{{ domain }}/tlsclient/simpleenroll/
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
