Update EST domain credential summary block template

--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_domain_credential_summary_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_domain_credential_summary_block.html
@@ -11,7 +11,7 @@
             <div>{% trans 'Domain Credential Request URL' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    https://{{ host }}/.well-known/est/{{ device.domain }}/domaincredential/simpleenroll/
+                    https://{{ host }}/.well-known/est/{{ domain }}/domaincredential/simpleenroll/
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
@@ -21,6 +21,10 @@
                     </svg>
                 </button>
             </div>
+        </li>
+        <li>
+            <div>{% trans 'Required Public Key Type' %}</div>
+            <div>{{ domain.public_key_info }}</div>
         </li>
     </ul>
 
