Fix conditional rendering and update data binding in template

--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/cmp_domain_credential_summary_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/cmp_domain_credential_summary_block.html
@@ -23,13 +23,15 @@
                 </button>
             </div>
         </li>
-        <li>
-            <div>{% trans 'Key Identifier (KID)' %}</div>
-            <div>{{ device.id }}</div>
-        </li>
+        {% if device.id %}
+            <li>
+                <div>{% trans 'Key Identifier (KID)' %}</div>
+                <div>{{ device.id }}</div>
+            </li>
+        {% endif %}
         <li>
             <div>{% trans 'Required Public Key Type' %}</div>
-            <div>{{ device.public_key_info }}</div>
+            <div>{{ domain.public_key_info }}</div>
         </li>
 
     </ul>
