Updated templates to include conditional logic for handling various certificate templates (e.g., TLS-server, TLS-client). Introduced warnings for unsupported templates and added separate blocks for CSR generation and enrollment tailored to specific templates.

--- a/trustpoint/templates/devices/help/generic_details/est_application_credential_summary_block.html
+++ b/trustpoint/templates/devices/help/generic_details/est_application_credential_summary_block.html
@@ -9,25 +9,10 @@
     <ul class="tp-kvp-list">
 
         <li>
-            <div>{% trans 'TLS-Client Certificate Request URL' %}</div>
+            <div>{% trans 'Certificate Request URL' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    https://{{ host }}/.well-known/est/{{ device.domain }}/tlsclient/simpleenroll/
-                </code>
-
-                <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
-                        aria-label="Copy to clipboard">
-                    <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
-                        <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
-                    </svg>
-                </button>
-            </div>
-        </li>
-        <li>
-            <div>{% trans 'TLS-Server Certificate Request URL' %}</div>
-            <div class="copy-container" style="position: relative;">
-                <code class="command-text language-bash">
-                    https://{{ host }}/.well-known/est/{{ device.domain }}/tlsserver/simpleenroll/
+                    https://{{ host }}/.well-known/est/{{ device.domain }}/{{ certificate_template }}/simpleenroll/
                 </code>
 
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
