--- a/trustpoint/templates/devices/help/no_onboarding/details/est_application_credentials_capabilities_block.html
+++ b/trustpoint/templates/devices/help/no_onboarding/details/est_application_credentials_capabilities_block.html
@@ -16,9 +16,9 @@
                     curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
                     --cacert server_cert.pem \<br>
                     --header "Content-Type: application/pkcs10" \<br>
-                    --data-binary "@my_csr.der" \<br>
+                    --data-binary "@csr.der" \<br>
                     -o certificate.der \<br>
-                    https://{{ host }}/.well-known/est/{{ device.domain }}/tlsclient/simpleenroll/
+                    https://{{ host }}/.well-known/est/{{ device.domain }}/tls-client/simpleenroll/
                 </code>
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
                         aria-label="Copy to clipboard">
@@ -35,9 +35,9 @@
                     curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
                     --cacert server_cert.pem \<br>
                     --header "Content-Type: application/pkcs10" \<br>
-                    --data-binary "@application_credential_csr.der" \<br>
+                    --data-binary "@csr.der" \<br>
                     -o certificate.der \<br>
-                    https://{{ host }}/.well-known/est/{{ device.domain }}/tlsserver/simpleenroll/
+                    https://{{ host }}/.well-known/est/{{ device.domain }}/tls-server/simpleenroll/
                 </code>
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
                         aria-label="Copy to clipboard">
