--- a/trustpoint/templates/devices/help/no_onboarding/est_username_password.html
+++ b/trustpoint/templates/devices/help/no_onboarding/est_username_password.html
@@ -21,33 +21,49 @@
             <div class="card-body">
                 <div class="tp-card-centered-content">
 
-                    {% include 'devices/help/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
-                    <h2>{% trans 'Summary' %}</h2>
-                    <hr>
-                    {% include 'devices/help/generic_details/est_application_credential_summary_block.html' %}
-                    {% include 'devices/help/generic_details/est_username_password_summary_block.html' %}
-                    <hr>
 
-                    <h2 class="mt-5">{% trans 'Create Keypair and Certificate Signing Request (CSR)' %}</h2>
-                    <hr>
-                    {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
-                    {% include 'devices/help/generic_details/est_application_csr_block.html' %}
+                    {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' or certificate_template == 'opcua-client' or certificate_template == 'opcua-server'%}
+                        {% include 'devices/help/generic_details/est_notifications_block.html' with expected_allow_app_certs=True expected_allow_username_registration=False expected_username_auth=True expected_domain_auth=False %}
 
-                    <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
-                    <hr>
-                    {% include 'devices/help/generic_details/download_tls_server_certificate_block.html' %}
+                        <h2>{% trans 'Summary' %}</h2>
+                        <hr>
+                        {% include 'devices/help/generic_details/est_application_credential_summary_block.html' %}
+                        {% include 'devices/help/generic_details/est_username_password_summary_block.html' %}
 
+                        <h2 class="mt-5">{% trans 'Download or Copy the Trustpoint TLS Server Certificate' %}</h2>
+                        <hr>
+                        {% include 'devices/help/generic_details/download_tls_server_certificate_block.html' %}
 
-                    <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
-                    <hr>
-                    {% include 'devices/help/no_onboarding/details/est_application_credentials_capabilities_block.html' %}
+                        <h2 class="mt-5">{% trans 'Create Keypair and Certificate Signing Request (CSR)' %}</h2>
+                        <hr>
+                        {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
+                        {% if certificate_template == 'tls-server' %}
+                            {% include 'devices/help/generic_details/est_application_csr_tls_server.html' %}
+                        {% elif certificate_template == 'tls-client' %}
+                            {% include 'devices/help/generic_details/est_application_csr_tls_client.html' %}
+                        {% elif certificate_template == 'opcua-client' %}
+                            {% include 'devices/help/generic_details/est_application_csr_opcua_client.html' %}
+                        {% elif certificate_template == 'opcua-server' %}
+                            {% include 'devices/help/generic_details/est_application_csr_opcua_server.html' %}
+                        {% endif %}
+
+                        <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
+                        <hr>
+                        {% include 'devices/help/no_onboarding/details/est_application_curl_enroll.html' %}
+                        {% include 'devices/help/generic_details/est_curl_cacert.html' %}
+                    {% else %}
+                        <div class="alert alert-warning" role="alert">
+                            <strong>Warning:</strong> There is no support for the selected certificate template
+                            <code>{{ certificate_template }}</code>.
+                        </div>
+                    {% endif %}
 
                 </div>
 
             </div>
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
-                    <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
+                    <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
                     <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
                        class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
