--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_domain_credential_csr_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_domain_credential_csr_block.html
@@ -16,7 +16,7 @@
                     -new \<br>
                     -key domain_credential_key.pem \<br>
                     -outform der \<br>
-                    -out domain_credential_csr.der \<br>
+                    -out csr.der \<br>
                     -subj "/CN={{ domain_credential_cn }}"
                 </code>
 
