--- a/trustpoint/templates/devices/help/onboarding/est_username_password.html
+++ b/trustpoint/templates/devices/help/onboarding/est_username_password.html
@@ -20,6 +20,7 @@
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
+
                     {% include 'devices/help/generic_details/est_notifications_block.html' with expected_allow_app_certs=False expected_allow_username_registration=True expected_username_auth=True expected_domain_auth=False %}
 
                     <h2>{% trans 'Summary' %}</h2>
@@ -40,13 +41,13 @@
                     <h2 class="mt-5">{% trans 'EST capabilities' %}</h2>
                     <hr>
                     {% include 'devices/help/onboarding/domain_credential_details/est_capabilities_block.html' %}
-
+                    {% include 'devices/help/generic_details/est_curl_cacert.html' %}
                 </div>
 
             </div>
             <div class="card-footer">
                 <div class="tp-card-btn-footer">
-                    <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
+                    <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
                     <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
                        class="btn btn-primary">{% trans "Certificate Lifecycle Management Summary" %}</a>
                 </div>
