--- a/trustpoint/templates/devices/help/no_onboarding/details/est_application_curl_enroll.html
+++ b/trustpoint/templates/devices/help/no_onboarding/details/est_application_curl_enroll.html
@@ -5,54 +5,46 @@
     <script src="{% static 'js/copy_clipboard.js' %}"></script>
 {% endblock head %}
 
-{% block cmp_enroll_application_credential_block %}
+{% block est_application_curl_enroll %}
+    <h3 class="mt-5">{% trans 'Application Certificates' %}</h3>
+    <hr>
     <ul class="tp-kvp-list">
-
         <li>
-            <div>{% trans 'TLS-Client CSR Generation' %}</div>
+            <div>{% trans 'Enroll Certificate' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    openssl req \<br>
-                    -new \<br>
-                    -key key.pem \<br>
-                    -outform der \<br>
-                    -out my_csr.der \<br>
-                    -subj "/CN={{ tls_client_cn }}"
+                    curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
+                    --cacert server_cert.pem \<br>
+                    --header "Content-Type: application/pkcs10" \<br>
+                    --data-binary "@csr.der" \<br>
+                    -o certificate.der \<br>
+                    https://{{ host }}/.well-known/est/{{ device.domain }}/{{ certificate_template }}/simpleenroll/
                 </code>
-
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
                         aria-label="Copy to clipboard">
                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                     </svg>
                 </button>
-
             </div>
         </li>
-    </ul>
-    <ul class="tp-kvp-list">
         <li>
-            <div>{% trans 'TLS-Server CSR Generation' %}</div>
-
+            <div>{% trans 'Convert DER to PEM' %}</div>
             <div class="copy-container" style="position: relative;">
                 <code class="command-text language-bash">
-                    openssl req \<br>
-                    -new \<br>
-                    -key key.pem \<br>
-                    -outform der \<br>
-                    -out application_credential_csr.der \<br>
-                    -subj "/CN={{ tls_server_cn }}"
+                    openssl x509 \<br>
+                    -inform der \<br>
+                    -in certificate.der \<br>
+                    -out certificate.pem
                 </code>
-
                 <button type="button" class="copy-button" data-tooltip="Copy to clipboard"
                         aria-label="Copy to clipboard">
                     <svg class="icon icon-copy" width="40" height="40" fill="currentColor">
                         <use href="{% static 'img/icons.svg' %}#icon-copy"></use>
                     </svg>
                 </button>
-
             </div>
         </li>
     </ul>
 
-{% endblock cmp_enroll_application_credential_block %}
+{% endblock est_application_curl_enroll %}
