--- a/trustpoint/templates/devices/help/onboarding/cmp_application_credentials.html
+++ b/trustpoint/templates/devices/help/onboarding/cmp_application_credentials.html
@@ -20,22 +20,37 @@
             </div>
             <div class="card-body">
                 <div class="tp-card-centered-content">
-                    <h2>{% trans 'Summary' %}</h2>
-                    <hr>
-                    {% include 'devices/help/generic_details/cmp_application_credential_summary_block.html' %}
 
-                    <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
-                    <hr>
-                    {% include 'devices/help/onboarding/domain_credential_details/cmp_issuing_ca_block.html' %}
-                    {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
-                    {% include 'devices/help/onboarding/application_credential_details/cmp_enroll_application_credential_block.html' %}
+
+                    {% if certificate_template == 'tls-server' or certificate_template == 'tls-client' %}
+                        <h2>{% trans 'Summary' %}</h2>
+                        <hr>
+                        {% include 'devices/help/generic_details/cmp_application_credential_summary_block.html' %}
+
+                        <h2 class="mt-5">{% trans 'Enroll Application Credential' %}</h2>
+                        <hr>
+                        {% include 'devices/help/onboarding/domain_credential_details/cmp_issuing_ca_block.html' %}
+                        {% include 'devices/help/generic_details/generic_application_credential_key_gen_block.html' %}
+
+                        {% if certificate_template == 'tls-server' %}
+                            {% include 'devices/help/onboarding/application_credential_details/cmp_enroll_tls_server.html' %}
+                        {% elif certificate_template == 'tls-client' %}
+                            {% include 'devices/help/onboarding/application_credential_details/cmp_enroll_tls_client.html' %}
+                        {% endif %}
+                    {% else %}
+                        <div class="alert alert-warning" role="alert">
+                            <strong>Warning:</strong> There is no support for the selected certificate template
+                            <code>{{ certificate_template }}</code>.
+                        </div>
+                    {% endif %}
+
 
                 </div>
 
             </div>
             <div class="card-footer d-flex justify-content-between align-items-center">
                 <div class="tp-card-btn-footer m-1">
-                    <a href="{% url 'devices:devices' %}" class="btn btn-secondary">{% trans "Back" %}</a>
+                    <button type="button" value="Back" class="btn btn-secondary btn-half" onClick="history.back()">{% trans 'Back' %}</button>
                     <a href="{% url 'devices:certificate_lifecycle_management' pk=device.pk %}"
                        class="btn btn-primary">{% trans "Lifecycle Management" %}</a>
                 </div>
