--- a/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_capabilities_block.html
+++ b/trustpoint/templates/devices/help/onboarding/domain_credential_details/est_capabilities_block.html
@@ -16,7 +16,7 @@
                     curl --user "{{ device.est_username }}:{{ device.est_password }}" \<br>
                     --cacert server_cert.pem \<br>
                     --header "Content-Type: application/pkcs10" \<br>
-                    --data-binary "@domain_credential_csr.der" \<br>
+                    --data-binary "@csr.der" \<br>
                     -o domain_credential_cert.der \<br>
                     https://{{ host }}/.well-known/est/{{ device.domain }}/domaincredential/simpleenroll/
                 </code>
